--- a/public/pages/grupos.html
+++ b/public/pages/grupos.html
@@ -31,5 +31,6 @@
       </tbody>
     </table>
     <button class="main__button" id="confirmar_grupos">Confirmar</button>
+    <label class="main__selection" id="status_grupos"></label>
   </div>
 </div>
