--- a/public/pages/meusanuncios.html
+++ b/public/pages/meusanuncios.html
@@ -1,6 +1,6 @@
 <h2 class="main__titulo">Painel de Anúncios Cadastrados</h2>
 <div class="main__container">
-    <div>
+    <div class="main__grupos">
         <h2 class="main__titulo">Grupos Anunciados</h2>
         <table>
       <thead>
@@ -25,6 +25,10 @@
     <option value="sexta">Sexta-feira</option>
     <option value="sabado">Sábado</option>
   </select>
+  <div class="main__selection__btns">
+  <button class="main__button" id="btn-apagar-anuncio">Apagar Dia</button>
+  <button class="main__button" id="btn-apagar-todos">Apagar Todos</button>
+  </div>
   <p class="main__selection">Deseja utilizar este anúncio em outros dias?</p>
   <div class="main__selection__checkbox">
     <div class="checkbox__selection">
@@ -52,6 +56,7 @@
   <label for="checkbox" class="main__selection">Sábado</label>
     </div>
   <button class="main__button" id="confirmar_checkbox">Confirmar</button>
+  <label class="main__selection" id="status_checkbox"></label>
   </div>
   </div>
   <div class="main__preview" id="amostra_chk">
