--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atentus Advertisements Zap</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="img/png" href="assets_page/favicon.png">
 </head>
 <body class="corpo__principal">
   <header class="cabecalho">
